# forward-to-the-past-kata

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile  rust-toolchain.toml  test.txt
.github/workflows/: build.yaml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/forward-to-the-future/: Cargo.toml
crates/forward-to-the-future/src/: lib.rs  movies.rs
crates/forward-to-the-future/tests/: acceptance.rs  film_name_recognition.rs  price_calculation.rs
