[package]
name = "store-cli"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
anyhow = { version = "1.0.83"}
clap = { version = "4.5.4", features = ["derive"] }
forward-to-the-future = { path = "../forward-to-the-future" }

[lints]
workspace = true

[[bin]]
name = "store-cli"
path = "src/main.rs"